--- a/assets/css/v2/eink/normal_header.scss
+++ b/assets/css/v2/eink/normal_header.scss
@@ -5,14 +5,6 @@
   background: #000;
 }
 
-.normal-header-icon {
-  display: inline-block;
-  width: 128px;
-  height: 128px;
-  margin: 120px 28px 40px 40px;
-  vertical-align: middle;
-}
-
 .normal-header-title {
   position: relative;
   width: 964px;
@@ -27,6 +19,14 @@
     font-size: 72px;
     line-height: 72px;
   }
+}
+
+.normal-header-title__icon {
+  display: inline-block;
+  width: 128px;
+  height: 128px;
+  margin: 110px 28px 40px 40px;
+  vertical-align: middle;
 }
 
 .normal-header-title__text {
